--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 DB_URL = mongodb+srv://wilfredtonye003:WLUVNL3U7QKOkd7j@cluster0.2re1rns.mongodb.net/?retryWrites=true&w=majority
+
+JWT_SECRET = codingwithwilfred
+JWT_EXPIRES = 2d
